<resources>
    <string name="app_name">LOg</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_sign">sign</string>
    <string name="title_activity_register">register</string>
    <string name="user_name">User name</string>
    <string name="email">Email Address</string>
    <string name="enterpass">Password</string>
    <string name="passwordC">Confirm Password</string>
    <string name="number">Phone Number</string>
    <string name="bregister">REGISTER</string>
    <string name="registerd">Already Registered!Login Me</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_splash">splash</string>
    <string name="cbutton">Camera</string>
    <string name="camera">Camera</string>
    <string name="cButton">New Button</string>
    <string name="title_activity_index">index</string>
    <string name="camera1">camera</string>
    <string name="title_activity_gallery">gallery</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_display_image">DisplayImage</string>
</resources>
